deploy/k8s/overlays/prod/patch-deploy-api-replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: assets-api
spec:
  replicas: 3
