deploy/k8s/overlays/prod/patch-deploy-worker-replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: assets-worker
spec:
  replicas: 2
