deploy/k8s/overlays/prod/netpol-allow-api-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-api-egress
spec:
  podSelector:
    matchLabels:
      app: assets
      component: api
  policyTypes:
    - Egress
  egress:
    - ports:
        - port: 443
          protocol: TCP
